apps/sparkyfitness/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sparkyfitness
  namespace: sparkyfitness
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sparkyfitness.home.daandewilde.be`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: kube-system
      services:
        - name: sparkyfitness-frontend
          port: 80
  tls: {}
